# dask-dirac

./: .flake8  .pre-commit-config.yaml  .pylintrc  LICENSE  README.md  noxfile.py  pyproject.toml
.github/workflows/: ci.yml  commit_msg.yml  contributors.yml
docker/: Dockerfile
docker/centos9/: Dockerfile
docker/cms_agc/: Dockerfile
docker/conda/: Dockerfile  environment.yaml
docker/python/: Dockerfile
docs/: conf.py  dev.rst  index.rst  misc.rst  oci_instructions.rst  servers.rst
examples/JDL/: JDL_1  JDL_3  JDL_examples.rst
examples/notebooks/: April2025_workshop.ipynb  client_graph.ipynb  dask_gather.ipynb  scheduler_plugin.ipynb  worker_plugin.ipynb
src/dask_dirac/: __init__.py  _dask.py  _dirac.py  _version.py  cli.py
src/dask_dirac/templates/: __init__.py  jdl.j2  submit_command.j2
tests/: gather_test.ipynb  gfal_test.ipynb  test_package.py
tests/data/: jdl_example  jdl_json
tests/templates/: test_jdl.py
tests/testjobs/testjob_1/: JDL
tests/testjobs/testjob_2/: JDL
tests/testjobs/testjob_3/: JDL
tests/testjobs/testjob_4/: JDL
